--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "react": "^18.0.0-alpha-464f27572-20210713",
     "react-arrow-key-navigation-hook": "^1.0.2",
     "react-dom": "^18.0.0-alpha-464f27572-20210713",
+    "react-modal": "^3.14.3",
     "react-speech-kit": "^3.0.1",
     "react-use-promise": "^0.3.1",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.14",
+    "@types/react-modal": "^3.12.1",
     "@types/webmidi": "^2.0.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
