--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@lachenmayer/midi-messages": "^1.0.1",
@@ -21,13 +23,16 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.14",
     "@types/react-modal": "^3.12.1",
     "@types/readable-stream": "^2.3.11",
     "@types/webmidi": "^2.0.6",
+    "babel-jest": "^27.0.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "typescript": "4.3.5"
   }
